--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@module-federation/nextjs-mf": "^8.8.8",
     "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1"
