feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_STORE_URL="http://localhost:3000"
 NEXT_PUBLIC_CART_URL="http://localhost:3001"
+# https://github.com/module-federation/module-federation-examples/issues/3624#issuecomment-1977930161
+NEXT_PRIVATE_LOCAL_WEBPACK = true
